--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,18 +4,20 @@ on:
   pull_request:
     branches:
       - main
+      - staging
   schedule:
     - cron: '05 10 * * *'  # 10:05am UTC everyday
   push:
     branches:
       - main
+      - staging
     paths-ignore:
       - '**/README.md'
   workflow_dispatch:
 
 env:
   MY_IMAGE_NAME: "${{ github.event.repository.name }}"  # the name of the image produced by this build, matches repo names
-  MY_IMAGE_DESC: "My Customized Universal Blue Image"
+  MY_IMAGE_DESC: "A Universal Blue image based around Plasma Mobile"
   IMAGE_REGISTRY: "ghcr.io/${{ github.repository_owner }}"  # do not edit
 
 concurrency:
